# RetroVoid

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/scraper/: igdb.rs  mod.rs
src/components/: ThemeProvider.tsx
src/components/layout/: MainLayout.tsx
src/components/three/: BarrelDistortionPointerCorrection.tsx  CoverArt3DBackground.tsx  CyberpunkEnvironment.tsx  GameCard3D.tsx  HolographicShelf.tsx  NeonGrid.tsx  ParticleField.tsx  RotatingStars.tsx  index.ts
src/components/three/effects/: BarrelDistortion.tsx  CRTFrame.tsx  PhosphorGlow.tsx
src/components/ui/: FullSettingsWindow.tsx  GameCard.tsx  GameDetail.tsx  GameGrid.tsx  HolographicShelfView.tsx  MetadataEditorModal.tsx  SettingsPanel.tsx  Sidebar.tsx  ToastContainer.tsx  TopBar.tsx  index.ts
src/config/: themes.ts
src/hooks/: useBarrelDistortionCorrection.ts  useTheme.ts
src/services/: emulator.ts  index.ts  library.ts  scraper.ts
src/stores/: index.ts  useLibraryStore.ts  useSettingsStore.ts  useUIStore.ts
src/types/: index.ts
src/utils/: platformIcons.ts
